# agile-ai

./: .env.example  README.md  jira_pipeline.py  pyproject.toml
src/agile_ai/: __init__.py
