[project]
name = "agile-ai"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jitse-Jan", email = "jj.vanwaterschoot@validis.com" }
]
dependencies = [
    "dlt[motherduck]>=1.6.1",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/agile_ai"]
